<resources>
    <string name="app_name">OrderFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link_image">Link image</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="repassword">RePassword</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="create_naccount">Create \nAccount</string>
</resources>