<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    tools:context=".uis.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:text="@string/create_naccount"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:textColor="#F44336"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/edtFirstname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/editext_background"
                android:drawableStart="@drawable/name"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="Firstname"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/tvLastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:textColor="#F44336"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/edtLastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/editext_background"
                android:drawableStart="@drawable/name"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="Lastname"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/tvUsername2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:textColor="#F44336"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/edtUsername2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/editext_background"
                android:drawableStart="@drawable/name"
                android:drawablePadding="16dp"
                android:ems="10"
                android:textColor="@color/white"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/tvPassword2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:textColor="#F44336"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/edtPassword2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/editext_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:textColor="@color/white"
                android:hint="@string/password"
                android:padding="8dp"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/tvPasswordConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:textColor="#F44336"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/edtPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/editext_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:textColor="@color/white"
                android:hint="@string/repassword"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/tvImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:textColor="#F44336"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/edtImage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/editext_background"
                android:drawableStart="@drawable/name"
                android:drawablePadding="16dp"
                android:ems="10"
                android:textColor="@color/white"
                android:hint="@string/link_image"
                android:padding="8dp"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:textColor="#F44336"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/editext_background"
                android:drawableStart="@drawable/name"
                android:drawablePadding="16dp"
                android:ems="10"
                android:textColor="@color/white"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="8dp"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:textColor="#F44336"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/editext_background"
                android:drawableStart="@drawable/name"
                android:drawablePadding="16dp"
                android:ems="10"
                android:textColor="@color/white"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="@color/white" />

            <ImageView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/btn_login" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>